--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "setupdb": "node src/setupsql.js",
+    "seed": "node src/seed.js",
     "start": "node src/bot.js"
   },
   "keywords": [],
@@ -12,9 +14,9 @@
   "license": "ISC",
   "dependencies": {
     "@discordjs/voice": "^0.16.1",
-    "discord": "^0.8.2",
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.5",
-    "libsodium-wrappers": "^0.7.13"
+    "libsodium-wrappers": "^0.7.13",
+    "mysql2": "^3.10.0"
   }
 }
